src/data/styles/common.scss
// colors
$primary: #b4d455;
$default: #fffff0;

$font-color: #818181;
$font-color-light: #c4c4c4;

// variables
$font-family-primary: 'Fira Code', sans-serif;
$font-family-secondary: 'Fira Code', sans-serif;

html {
  box-sizing: border-box;
  *,
  *::before,
  *::after {
    box-sizing: border-box;
  }

  height: 100%;
  width: 100%;

}

body {
  font-family: $font-family-primary;
  max-width: 100vw;
  overflow-x: hidden;
  color: $font-color;
  font-size: 14px;
  background-color: $default;

  p {
    margin-bottom: 0px;
  }

  h1, h2, h3, h4, h5, h6 {
    margin-bottom: 0px;
    color: $font-color;
  }
}

// height and width
.wave-full-parent-height {
  height: 100%;
}

.wave-full-width {
  width: 100%;
}

// positioning
.wave-flex {
  display: flex;
}

.wave-flex-row {
  display: flex;
  flex-direction: row;
}

.wave-flex-column {
  display: flex;
  flex-direction: column;
}

.wave-flex-jc {
  justify-content: center;
}

.wave-flex-center {
  align-items: center;
  justify-content: center;
}

// spacing
.wave-lr-padding-2 {
  @include lr-padding(2px);
}

.wave-tb-padding-2 {
  @include tb-padding(2px);
}

.wave-lr-padding-4 {
  @include lr-padding(4px);
}

.wave-tb-padding-4 {
  @include tb-padding(4px);
}

